fix: add z-index 100 for contact form

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1167,6 +1167,8 @@ section {
     .contact {
       width: 100%;
       height: 100%;
+      padding-bottom: 5rem;
+
       .contact__form {
         .contact__header {
           margin: auto;
@@ -1181,7 +1183,7 @@ section {
           width: 100%;
           font-size: 16px;
           padding: 24px;
-          margin-top: 24px;
+          margin-top: 12px;
         }
       }
     }
